--- a/db.properties
+++ b/db.properties
@@ -1,4 +1,4 @@
-user=postgres
-password=docker
-dburl=jdbc:postgresql://192.168.99.100:5432/coursejdbc
+user=
+password=
+dburl=/coursejdbc
 useSSL=false
